# CodeGeneratorCore

./: CMakeLists.txt  README.md
CodeGeneratorCore/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  CodeGeneratorCore.cpp  CodeGeneratorCore.h  Helpers.cpp  Helpers.h  IR.cpp  IR.h  Parser.cpp  Parser.h  Structs.h  TRS.cpp  TRS.h  TermParser.cpp  TermParser.h  main.cpp
TestFiles/: output.cpp  test1.cpp  test1.xml  test2.cpp  test2.xml  test3.cpp  test3.xml  test_no_opt2.cpp  test_o_opt1.cpp  test_o_opt3.cpp
